Ajoute les indicateurs de qualite des extractions
